Make the header links relative and without extension

--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
                         40K Army Cleaner
                     </a>
                     <div class="hidden md:flex items-center space-x-6">
-                        <a href="/install.html" class="text-secondary hover:text-primary transition-colors font-medium">
+                        <a href="/install" class="text-secondary hover:text-primary transition-colors font-medium">
                             Install
                         </a>
                         <a href="https://github.com/teddyzetterlund/w40k-army-cleaner/issues" target="_blank" rel="noopener noreferrer" class="text-secondary hover:text-primary transition-colors font-medium">
                             Feedback
                         </a>
-                        <a href="/about.html" class="text-secondary hover:text-primary transition-colors font-medium">
+                        <a href="/about" class="text-secondary hover:text-primary transition-colors font-medium">
                             About
                         </a>
                     </div>
@@ -177,13 +177,13 @@
             <!-- Mobile menu -->
             <div id="mobile-menu" class="md:hidden hidden mt-4 pb-4 border-t border-subtle pt-4">
                 <div class="flex flex-col space-y-3">
-                    <a href="/install.html" class="text-secondary hover:text-primary transition-colors font-medium">
+                    <a href="/install" class="text-secondary hover:text-primary transition-colors font-medium">
                         Install
                     </a>
                     <a href="https://github.com/teddyzetterlund/w40k-army-cleaner/issues" target="_blank" rel="noopener noreferrer" class="text-secondary hover:text-primary transition-colors font-medium">
                         Feedback
                     </a>
-                    <a href="/about.html" class="text-secondary hover:text-primary transition-colors font-medium">
+                    <a href="/about" class="text-secondary hover:text-primary transition-colors font-medium">
                         About
                     </a>
                 </div>
