--- a/install.html
+++ b/install.html
@@ -131,13 +131,13 @@
                         40K Army Cleaner
                     </a>
                     <div class="hidden md:flex items-center space-x-6">
-                        <a href="/install.html" class="text-primary font-medium">
+                        <a href="/install" class="text-primary font-medium">
                             Install
                         </a>
                         <a href="https://github.com/teddyzetterlund/w40k-army-cleaner/issues" target="_blank" rel="noopener noreferrer" class="text-secondary hover:text-primary transition-colors font-medium">
                             Feedback
                         </a>
-                        <a href="/about.html" class="text-secondary hover:text-primary transition-colors font-medium">
+                        <a href="/about" class="text-secondary hover:text-primary transition-colors font-medium">
                             About
                         </a>
                     </div>
@@ -154,13 +154,13 @@
             <!-- Mobile menu -->
             <div id="mobile-menu" class="md:hidden hidden mt-4 pb-4 border-t border-subtle pt-4">
                 <div class="flex flex-col space-y-3">
-                    <a href="/install.html" class="text-primary font-medium">
+                    <a href="/install" class="text-primary font-medium">
                         Install
                     </a>
                     <a href="https://github.com/teddyzetterlund/w40k-army-cleaner/issues" target="_blank" rel="noopener noreferrer" class="text-secondary hover:text-primary transition-colors font-medium">
                         Feedback
                     </a>
-                    <a href="/about.html" class="text-secondary hover:text-primary transition-colors font-medium">
+                    <a href="/about" class="text-secondary hover:text-primary transition-colors font-medium">
                         About
                     </a>
                 </div>
@@ -275,7 +275,7 @@
                 <div class="bg-secondary border border-subtle rounded-lg p-8">
                     <div class="flex items-center mb-6">
                         <svg class="w-8 h-8 text-accent-primary mr-3" fill="currentColor" viewBox="0 0 24 24">
-                            <path d="M17.523 15.3414c-.5511 0-.9993-.4486-.9993-.9997s.4482-.9993.9993-.9993c.5511 0 .9993.4482.9993.9993.0001.5511-.4482.9997-.9993.9997m-11.046 0c-.5511 0-.9993-.4486-.9993-.9997s.4482-.9993.9993-.9993c.5511 0 .9993.4482.9993.9993 0 .5511-.4482.9997-.9993.9997m11.4045-6.02l1.9973-3.4592a.416.416 0 00-.1521-.5676.416.416 0 00-.5676.1521l-2.0223 3.5036C15.5902 8.2432 13.8533 7.4287 11.9797 7.4287c-1.8736 0-3.6105.8145-4.8055 2.1768L5.1519 6.1019a.416.416 0 00-.5676-.1521.416.416 0 00-.1521.5676L6.4189 9.3214C4.6889 10.7933 3.5 12.8118 3.5 15.0735c0 .5511.4482.9993.9993.9993s.9993-.4482.9993-.9993c0-1.9917 1.019-3.7485 2.5697-4.8015.3684-.2277.8748-.1733 1.1953.1235 1.2579 1.4609 3.1316 2.3682 5.2256 2.3682 2.094 0 3.9677-.9073 5.2256-2.3682.3205-.2968.8269-.3512 1.1953-.1235 1.5507 1.053 2.5697 2.8098 2.5697 4.8015 0 .5511.4482.9993.9993.9993s.9993-.4482.9993-.9993c0-2.2617-1.1889-4.2802-2.9189-5.7521"/>
+                            <path d="M17.523 15.3414c-.5511 0-.9993-.4486-.9993-.9997s.4482-.9993.9993-.9993c.5511 0 .9993.4482.9993.9993.0001.5511-.4482.9997-.9993.9997m-11.046 0c-.5511 0-.9993-.4486-.9997s.4482-.9993.9993-.9993c.5511 0 .9993.4482.9993.9993 0 .5511-.4482.9997-.9993.9997m11.4045-6.02l1.9973-3.4592a.416.416 0 00-.1521-.5676.416.416 0 00-.5676.1521l-2.0223 3.5036C15.5902 8.2432 13.8533 7.4287 11.9797 7.4287c-1.8736 0-3.6105.8145-4.8055 2.1768L5.1519 6.1019a.416.416 0 00-.5676-.1521.416.416 0 00-.1521.5676L6.4189 9.3214C4.6889 10.7933 3.5 12.8118 3.5 15.0735c0 .5511.4482.9993.9993.9993s.9993-.4482.9993-.9993c0-1.9917 1.019-3.7485 2.5697-4.8015.3684-.2277.8748-.1733 1.1953.1235 1.2579 1.4609 3.1316 2.3682 5.2256 2.3682 2.094 0 3.9677-.9073 5.2256-2.3682.3205-.2968.8269-.3512 1.1953-.1235 1.5507 1.053 2.5697 2.8098 2.5697 4.8015 0 .5511.4482.9993.9993.9993s.9993-.4482.9993-.9993c0-2.2617-1.1889-4.2802-2.9189-5.7521"/>
                         </svg>
                         <h2 class="text-2xl font-bold text-primary">Install on Android</h2>
                     </div>
