Add base tag to head so relative links works

--- a/install.html
+++ b/install.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Install - 40K Army Cleaner</title>
     <meta name="description" content="Install 40K Army Cleaner as a Progressive Web App">
+    <base href="/w40k-army-cleaner/">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1a1a1a">
     <link rel="icon" href="favicon.ico">
