--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - 40K Army Cleaner</title>
     <meta name="description" content="About the 40K Army Cleaner application">
+    <base href="/w40k-army-cleaner/">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1a1a1a">
     <link rel="icon" href="favicon.ico">
