--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>40K Army Cleaner</title>
     <meta name="description" content="Clean your Warhammer 40K army rosters">
-    <base href="/w40k-army-cleaner/">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1a1a1a">
     <link rel="icon" href="favicon.ico">
@@ -155,13 +154,13 @@
                         40K Army Cleaner
                     </a>
                     <div class="hidden md:flex items-center space-x-6">
-                        <a href="/install" class="text-secondary hover:text-primary transition-colors font-medium">
+                        <a href="./install" class="text-secondary hover:text-primary transition-colors font-medium">
                             Install
                         </a>
                         <a href="https://github.com/teddyzetterlund/w40k-army-cleaner/issues" target="_blank" rel="noopener noreferrer" class="text-secondary hover:text-primary transition-colors font-medium">
                             Feedback
                         </a>
-                        <a href="/about" class="text-secondary hover:text-primary transition-colors font-medium">
+                        <a href="./about" class="text-secondary hover:text-primary transition-colors font-medium">
                             About
                         </a>
                     </div>
@@ -178,13 +177,13 @@
             <!-- Mobile menu -->
             <div id="mobile-menu" class="md:hidden hidden mt-4 pb-4 border-t border-subtle pt-4">
                 <div class="flex flex-col space-y-3">
-                    <a href="/install" class="text-secondary hover:text-primary transition-colors font-medium">
+                    <a href="./install" class="text-secondary hover:text-primary transition-colors font-medium">
                         Install
                     </a>
                     <a href="https://github.com/teddyzetterlund/w40k-army-cleaner/issues" target="_blank" rel="noopener noreferrer" class="text-secondary hover:text-primary transition-colors font-medium">
                         Feedback
                     </a>
-                    <a href="/about" class="text-secondary hover:text-primary transition-colors font-medium">
+                    <a href="./about" class="text-secondary hover:text-primary transition-colors font-medium">
                         About
                     </a>
                 </div>
