--- a/about.html
+++ b/about.html
@@ -120,14 +120,14 @@
                         40K Army Cleaner
                     </a>
                     <div class="hidden md:flex items-center space-x-6">
+                        <a href="./about" class="text-primary font-medium">
+                            About
+                        </a>
                         <a href="./install" class="text-secondary hover:text-primary transition-colors font-medium">
                             Install
                         </a>
-                        <a href="https://github.com/teddyzetterlund/w40k-army-cleaner/issues" target="_blank" rel="noopener noreferrer" class="text-secondary hover:text-primary transition-colors font-medium">
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfmYOaR-I8itYneK65_A_LR5wHXAHrigx9-GvBYxPCiGtLl-Q/viewform?usp=dialog" target="_blank" rel="noopener noreferrer" class="text-secondary hover:text-primary transition-colors font-medium">
                             Feedback
-                        </a>
-                        <a href="./about" class="text-primary font-medium">
-                            About
                         </a>
                     </div>
                 </div>
@@ -143,14 +143,14 @@
             <!-- Mobile menu -->
             <div id="mobile-menu" class="md:hidden hidden mt-4 pb-4 border-t border-subtle pt-4">
                 <div class="flex flex-col space-y-3">
+                    <a href="./about" class="text-primary font-medium">
+                        About
+                    </a>
                     <a href="./install" class="text-secondary hover:text-primary transition-colors font-medium">
                         Install
                     </a>
-                    <a href="https://github.com/teddyzetterlund/w40k-army-cleaner/issues" target="_blank" rel="noopener noreferrer" class="text-secondary hover:text-primary transition-colors font-medium">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfmYOaR-I8itYneK65_A_LR5wHXAHrigx9-GvBYxPCiGtLl-Q/viewform?usp=dialog" target="_blank" rel="noopener noreferrer" class="text-secondary hover:text-primary transition-colors font-medium">
                         Feedback
-                    </a>
-                    <a href="./about" class="text-primary font-medium">
-                        About
                     </a>
                 </div>
             </div>
