--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <div id="input-phase" class="space-y-6">
                 <div>
                     <label for="roster-input" class="block text-xl font-semibold text-primary mb-4">
-                        Paste or drag and drop your roster here
+                        Paste or drag and drop your roster
                     </label>
                     <textarea
                         id="roster-input"
@@ -231,11 +231,10 @@
                         <div class="flex items-center space-x-3">
                             <div class="relative inline-block text-left">
                                 <button type="button" class="btn-secondary px-4 py-2 rounded-lg text-sm font-medium focus-ring" id="options-menu-button" aria-haspopup="true" aria-expanded="true">
-                                    <svg class="w-4 h-4 mr-2 inline" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                    <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z"></path>
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
                                     </svg>
-                                    Options
                                 </button>
                                 <div id="options-menu" class="origin-top-right absolute right-0 mt-2 w-64 rounded-lg shadow-lg bg-white ring-1 ring-black ring-opacity-5 focus:outline-none hidden z-10" role="menu" aria-orientation="vertical" aria-labelledby="options-menu-button">
                                     <div class="py-2" role="none">
