Update the name of the app to W40K Roster Cleaner

--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - 40K Army Cleaner</title>
-    <meta name="description" content="About the 40K Army Cleaner application">
+    <title>About - W40K Roster Cleaner</title>
+    <meta name="description" content="About the W40K Roster Cleaner application">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1a1a1a">
     <link rel="icon" href="favicon.ico">
@@ -117,7 +117,7 @@
             <nav class="flex items-center justify-between">
                 <div class="flex items-center space-x-8">
                     <a href="./" class="text-xl font-semibold text-primary hover:text-secondary transition-colors">
-                        40K Army Cleaner
+                        W40K Roster Cleaner
                     </a>
                     <div class="hidden md:flex items-center space-x-6">
                         <a href="./about" class="text-primary font-medium">
@@ -162,7 +162,7 @@
             <div class="space-y-8">
                 <!-- Hero Section -->
                 <div class="bg-secondary border border-subtle rounded-lg p-8 text-center">
-                    <h1 class="text-4xl font-bold text-primary mb-4">About 40K Army Cleaner</h1>
+                    <h1 class="text-4xl font-bold text-primary mb-4">About W40K Roster Cleaner</h1>
                     <p class="text-xl text-secondary mb-6">
                         A powerful tool for cleaning and formatting Warhammer 40K army rosters
                     </p>
