--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>40K Army Cleaner</title>
+    <title>W40K Roster Cleaner</title>
     <meta name="description" content="Clean your Warhammer 40K army rosters">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1a1a1a">
@@ -151,7 +151,7 @@
             <nav class="flex items-center justify-between">
                 <div class="flex items-center space-x-8">
                     <a href="/" class="text-xl font-semibold text-primary hover:text-secondary transition-colors">
-                        40K Army Cleaner
+                        W40K Roster Cleaner
                     </a>
                     <div class="hidden md:flex items-center space-x-6">
                         <a href="./about" class="text-secondary hover:text-primary transition-colors font-medium">
