--- a/install.html
+++ b/install.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Install - 40K Army Cleaner</title>
-    <meta name="description" content="Install 40K Army Cleaner as a Progressive Web App">
+    <title>Install - W40K Roster Cleaner</title>
+    <meta name="description" content="Install W40K Roster Cleaner as a Progressive Web App">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1a1a1a">
     <link rel="icon" href="favicon.ico">
@@ -128,7 +128,7 @@
             <nav class="flex items-center justify-between">
                 <div class="flex items-center space-x-8">
                     <a href="./" class="text-xl font-semibold text-primary hover:text-secondary transition-colors">
-                        40K Army Cleaner
+                        W40K Roster Cleaner
                     </a>
                     <div class="hidden md:flex items-center space-x-6">
                         <a href="./about" class="text-secondary hover:text-primary transition-colors font-medium">
@@ -173,7 +173,7 @@
             <div class="space-y-8">
                 <!-- Hero Section -->
                 <div class="bg-secondary border border-subtle rounded-lg p-8 text-center">
-                    <h1 class="text-4xl font-bold text-primary mb-4">Install 40K Army Cleaner</h1>
+                    <h1 class="text-4xl font-bold text-primary mb-4">Install W40K Roster Cleaner</h1>
                     <p class="text-xl text-secondary mb-6">
                         Install this app on your device for quick access and offline use
                     </p>
@@ -241,7 +241,7 @@
                             <div class="step-number w-8 h-8 rounded-full flex items-center justify-center text-sm flex-shrink-0 mt-1">2</div>
                             <div>
                                 <h3 class="text-lg font-semibold text-primary mb-2">Navigate to the App</h3>
-                                <p class="text-secondary">Go to the 40K Army Cleaner website</p>
+                                <p class="text-secondary">Go to the W40K Roster Cleaner website</p>
                             </div>
                         </div>
                         
@@ -293,7 +293,7 @@
                             <div class="step-number w-8 h-8 rounded-full flex items-center justify-center text-sm flex-shrink-0 mt-1">2</div>
                             <div>
                                 <h3 class="text-lg font-semibold text-primary mb-2">Navigate to the App</h3>
-                                <p class="text-secondary">Go to the 40K Army Cleaner website</p>
+                                <p class="text-secondary">Go to the W40K Roster Cleaner website</p>
                             </div>
                         </div>
                         
