feat: configure PWA icons for Android and iOS installation
- Update manifest.json to use correct icon paths from /icons directory
- Add Apple-specific meta tags to index.html for iOS PWA installation
- Replace favicon.ico references with PNG icons for better browser support
- Add purpose="any maskable" to manifest icons for better Android support
- Clean up unused generate-icons.js and icon.svg files
- Keep Apple meta tags only on index.html (main app page) for proper UX

Users can now install the app on their devices with proper "W40K Cleaner" icons.

--- a/about.html
+++ b/about.html
@@ -7,7 +7,9 @@
     <meta name="description" content="About the W40K Roster Cleaner application">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1a1a1a">
-    <link rel="icon" href="favicon.ico">
+    
+    <link rel="icon" type="image/png" sizes="192x192" href="icons/pwa_icon_192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="icons/pwa_icon_512x512.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
