--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <meta name="description" content="Clean your Warhammer 40K army rosters">
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1a1a1a">
-    <link rel="icon" href="favicon.ico">
+    
+    <!-- Apple-specific meta tags for iOS PWA installation -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="40K Cleaner">
+    <link rel="apple-touch-icon" href="icons/apple_icon_180x180.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="icons/apple_icon_152x152.png">
+    <link rel="apple-touch-icon" sizes="167x167" href="icons/apple_icon_167x167.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple_icon_180x180.png">
+    
+    <link rel="icon" type="image/png" sizes="192x192" href="icons/pwa_icon_192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="icons/pwa_icon_512x512.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
