--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>W40K Roster Cleaner</title>
     <meta name="description" content="Clean your Warhammer 40K army rosters">
     <link rel="manifest" href="manifest.json">
@@ -360,7 +363,7 @@
         </main>
     </div>
 
-    <script type="module" src="app.js"></script>
+    <script type="module" src="app.js?v=1.1.0"></script>
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
