--- a/install.html
+++ b/install.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Install - W40K Roster Cleaner</title>
     <meta name="description" content="Install W40K Roster Cleaner as a Progressive Web App">
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#1a1a1a">
     
-    <link rel="icon" type="image/png" sizes="192x192" href="icons/pwa_icon_192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="icons/pwa_icon_512x512.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/icons/pwa_icon_192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/icons/pwa_icon_512x512.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
