feat: add sample roster functionality for new users
- Add "Try Sample Roster" button that loads Dark Angels army list
- Include informational text explaining roster sources (Games Workshop App, New Recruit)
- Implement using existing input event flow for consistency
- Make button optional in DOM setup for robustness
- Add comprehensive tests for core functionality
- Use real Dark Angels roster from fixtures as sample data

This helps new users understand how the roster cleaner works without
requiring them to paste their own roster first.

--- a/index.html
+++ b/index.html
@@ -216,6 +216,31 @@
                         placeholder="Paste your roster here..."
                     ></textarea>
                 </div>
+                
+                <!-- Sample Roster Section -->
+                <div class="bg-card rounded-lg p-6 border border-subtle">
+                    <div class="flex items-center justify-between mb-4">
+                        <h3 class="text-lg font-semibold text-primary">New to roster cleaning?</h3>
+                        <button
+                            id="try-sample-roster"
+                            class="btn-primary px-4 py-2 rounded-lg text-sm font-medium focus-ring"
+                        >
+                            Try Sample Roster
+                        </button>
+                    </div>
+                    <div class="text-sm text-secondary space-y-2">
+                        <p>
+                            <strong>Where do rosters come from?</strong> You can export rosters from:
+                        </p>
+                        <ul class="list-disc list-inside space-y-1 ml-4">
+                            <li><strong>Games Workshop App:</strong> Official Warhammer 40K list builder</li>
+                            <li><strong>New Recruit:</strong> Popular third-party list building tool</li>
+                        </ul>
+                        <p class="text-muted text-xs mt-3">
+                            Click "Try Sample Roster" to see how the cleaner works with a Dark Angels army list.
+                        </p>
+                    </div>
+                </div>
             </div>
 
             <!-- Phase 2: Output Mode (Hidden by default) -->
